
Bug fixes:

  * fixed a whole class of problems created by regexp literals containing quotes, brackets, braces and parens
  * fixed unreported bug where warning/error faces weren't overriding normal fontification face in some cases
  * Issue #8:  bug in parsing an unescaped '/' in a regexp character class
  * Issue #17:  /**/foo/**/ being parsed as a single block comment
  * Issue #24:  mode doesn't highlight anything for certain malformed input
  * Issue #25:  inserting escaped quote ignores existing escape char at point
  * Issue #26:  can't insert escaped quote just before end of terminated string
  * Issue #27:  Improper flagging of inconsistent return usage
  * Issue #29:  spurious no-side-effects warning on the "debugger" keyword
  * Issue #34:  Unexpected behavior with js2-mode-find-tag
  * Issue #35:  need to define a local js2-mode-abbrev-table
  * Issue #37:  typing # will crash Emacs
  * Issue #38:  chokes on non-ASCII characters in identifiers
  * Issue #40:  warning on byte-compile
  * Issue #42:  hide-comments should hide //-comments
  * Issue #47:  namespace cleanliness nit

Behavior changes:

  * changed close-curly to use the magic-close-paren function, so that typing C-u {} does the right thing.

=Release notes for xxx, js2-2008xxxx.el:=

New features:

  * report error on multiple var-decls in for-in loop, e.g. for (var x, y in foo)

Bug fixes:

  * Issue #63:  jsdoc highlighting was broken
  * Issue #71:  bogus "no side effects" warning
  * fixed unreported bug where js2-next-error still stopped at suppressed warnings 

Behavior changes:

  * don't do quote-matching inside comments, as it rarely works right

  * fixed js2-missing-semi-one-line-override to work for arbitrary function bodies.
    It previously only worked if the function body was a simple statement like "return blah".
    Now the warning is suppressed for any function body whose open and close curlies
    are on the same line.